RESOLVED FIXED 133057
REGRESSION (r154622): Borders disappear when hovering over cells in table
https://bugs.webkit.org/show_bug.cgi?id=133057
Summary REGRESSION (r154622): Borders disappear when hovering over cells in table
Maciej Stachowiak
Reported 2014-05-18 15:34:51 PDT
Created attachment 231668 [details] Test case Borders disappear when hovering over cells in a table with hover effects on the cell and collapsed borders. 1) Load attached test case. 2) Hover over the leftmost cell, and then scan from left to right.
Attachments
Test case (344 bytes, text/html)
2014-05-18 15:34 PDT, Maciej Stachowiak
no flags
Patch (10.92 KB, patch)
2014-05-31 21:45 PDT, Brent Fulgham
no flags
Patch (4.29 KB, patch)
2014-06-02 09:24 PDT, Brent Fulgham
no flags
Patch (3.71 KB, patch)
2014-06-02 09:28 PDT, Brent Fulgham
thorton: review+
Maciej Stachowiak
Comment 1 2014-05-18 15:35:08 PDT
Maciej Stachowiak
Comment 2 2014-05-18 15:37:17 PDT
Jon Lee
Comment 3 2014-05-28 09:31:10 PDT
This is a pretty bad visual error. I think we should rollback the patch.
Robert Hogan
Comment 4 2014-05-28 11:05:26 PDT
Please do - I can't provide a fix as I cannot get a working WebKit build going anymore.
Brent Fulgham
Comment 5 2014-05-31 21:45:25 PDT
Brent Fulgham
Comment 6 2014-06-02 09:24:55 PDT
Brent Fulgham
Comment 7 2014-06-02 09:28:32 PDT
Brent Fulgham
Comment 8 2014-06-02 09:38:11 PDT
Martin Hock
Comment 9 2014-06-02 11:22:22 PDT
Changed [ Failure ] to [ ImageOnlyFailure ] in r169535. https://trac.webkit.org/r169535
Note You need to log in before you can comment on or make changes to this bug.