REGRESSION (r154622): Borders disappear when hovering over cells in table https://bugs.webkit.org/show_bug.cgi?id=133057 <rdar://problem/15922359>

Reviewed by Tim Horton.


Source/WebCore:
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paintCollapsedBorders): Revert recent
non-edge collapsed border optimization due to drawing
regressions.

LayoutTests:
* TestExpectations: Mark the test we added in r154622 as failing
until we provide a permanent fix.


Canonical link: https://commits.webkit.org/151472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169532 268f45cc-cd09-0410-ab3c-d52691b4dbfc