Source/WebCore/rendering/RenderTableCell.cpp
@@ -1203,14 +1203,12 @@ void RenderTableCell::paintCollapsedBorders(PaintInfo& paintInfo, const LayoutPo
     int bottomYOffsetLeft = bottomWidth;
     int bottomYOffsetRight = bottomWidth;
 
-    // We use the direction/writing-mode given by the section here because we want to know if we're
-    // at the section's edge.
-    bool shouldDrawTopBorder = !cellAtTop(&section()->style());
-    bool shouldDrawLeftBorder = !cellAtLeft(&section()->style());
+    bool shouldDrawTopBorder = true;
+    bool shouldDrawLeftBorder = true;
     bool shouldDrawRightBorder = true;
 
     if (RenderTableCell* top = cellAtTop(&styleForCellFlow)) {
-        shouldDrawTopBorder = shouldDrawTopBorder && top->alignLeftRightBorderPaintRect(leftXOffsetTop, rightXOffsetTop);
+        shouldDrawTopBorder = top->alignLeftRightBorderPaintRect(leftXOffsetTop, rightXOffsetTop);
         if (this->colSpan() > 1)
             shouldDrawTopBorder = false;
     }
@@ -1219,7 +1217,7 @@ void RenderTableCell::paintCollapsedBorders(PaintInfo& paintInfo, const LayoutPo
         bottom->alignLeftRightBorderPaintRect(leftXOffsetBottom, rightXOffsetBottom);
 
     if (RenderTableCell* left = cellAtLeft(&styleForCellFlow))
-        shouldDrawLeftBorder = shouldDrawLeftBorder && left->alignTopBottomBorderPaintRect(topYOffsetLeft, bottomYOffsetLeft);
+        shouldDrawLeftBorder = left->alignTopBottomBorderPaintRect(topYOffsetLeft, bottomYOffsetLeft);
 
     if (RenderTableCell* right = cellAtRight(&styleForCellFlow))
         shouldDrawRightBorder = right->alignTopBottomBorderPaintRect(topYOffsetRight, bottomYOffsetRight);
